<resources>
    <string name="app_name">FoodApp</string>
    <string name="default_card_text_resturant">Resturant</string>
    <string name="default_card_text_cost">$0.00</string>
    <string name="default_card_text_food_item">Food Item</string>
    <string name="default_card_text_item_desc">This is a short description of the food item.</string>
    <string name="image_default_text">Food item image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>