<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:background="@drawable/border"
    app:barrierMargin="10dp">

    <ImageView
        android:id="@+id/foodImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/image_default_text"
        android:scaleType="centerCrop"
        android:src="@drawable/burger"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/foodNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/default_card_text_food_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/foodImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/foodDescText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_card_text_item_desc"
        app:layout_constraintBottom_toTopOf="@+id/resturantNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/foodNameText"
        app:layout_constraintTop_toBottomOf="@+id/foodNameText" />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/default_card_text_cost"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/resturantNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/resturantNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/default_card_text_resturant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/priceText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/foodImageView"
        app:layout_constraintTop_toBottomOf="@+id/foodDescText" />

</androidx.constraintlayout.widget.ConstraintLayout>